pipelines/tekton/dev/14-event-listener-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: widgety-pf-build-event-listener
  namespace: widgety-pipelines
  labels:
    app: widgety-pf
spec:
  path: /
  to:
    kind: Service
    name: el-widgety-pf-build-event-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
